FIX: gap under collection of highlights removed

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -663,7 +663,7 @@
 }
 
 .highlights-form {
-  padding: 20px 10px;
+  padding: 20px 10px 0;
   display: flex;
   flex-direction: column;
   align-content: center;
